--- a/lab2/ex2/lab.conf
+++ b/lab2/ex2/lab.conf
@@ -10,14 +10,20 @@ r1[sysctl]="net.ipv6.conf.all.forwarding=1"
 r1[sysctl]="net.ipv6.conf.all.accept_ra=0"
 
 pc1[0]="lan1"
-r1[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc1[sysctl]="net.ipv6.conf.all.forwarding=0"
+#pc1[sysctl]="net.ipv6.conf.eth0.addr_gen_mode=0"
 
 pc2[0]="lan1"
-r1[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc2[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc2[sysctl]="net.ipv6.conf.eth0.addr_gen_mode=3"
 
 pc3[0]="lan2"
-r1[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc3[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc3[sysctl]="net.ipv6.conf.eth0.addr_gen_mode=1"
 
 pc4[0]="lan2"
-r1[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc4[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc4[sysctl]="net.ipv6.conf.eth0.use_tempaddr=2"
+pc4[sysctl]="net.ipv6.conf.eth0.temp_valid_lft=100"
+pc4[sysctl]="net.ipv6.conf.eth0.temp_prefered_lft=300"
 
