--- a/lab2/ex3/lab.conf
+++ b/lab2/ex3/lab.conf
@@ -10,6 +10,12 @@ r1[sysctl]="net.ipv6.conf.eth0.autoconf=0"
 
 pc1[0]='lan'
 pc1[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc1[sysctl]="net.ipv6.conf.all.accept_ra=1"
+#pc1[sysctl]="net.ipv6.conf.all.addr_gen_mode=2"
+
+
 pc2[0]='lan'
 pc2[sysctl]="net.ipv6.conf.all.forwarding=0"
+pc2[sysctl]="net.ipv6.conf.all.accept_ra=1"
+#pc2[sysctl]="net.ipv6.conf.all.addr_gen_mode=2"
 
