--- a/lab3/ex2/lab.conf
+++ b/lab3/ex2/lab.conf
@@ -4,15 +4,16 @@ LAB_AUTHOR="Angelo Spognardi"
 LAB_EMAIL=spognardi@di.uniroma1.it
 LAB_WEB=https://sites.google.com/di.uniroma1.it/netdef2021
 
-r1[0]='A'
+r1[0]='internal'
 r1[bridged]=true
 r1[sysctl]="net.ipv6.conf.all.forwarding=1"
 r1[sysctl]="net.ipv4.ip_forward=1"
 
-s1[0]='A'
+s1[0]='internal'
 s1[bridged]=true
-pc1[0]='A'
 
-a1[0]='A'
+pc1[0]='internal'
+
+a1[0]='internal'
 a1[bridged]=true
 a1[sysctl]="net.ipv6.conf.all.forwarding=0"
